--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^3.3.1",
     "react-resizable-panels": "^3.0.4",
     "react-spinners": "^0.17.0",
     "recharts": "2.15.4",
